# Textor

./: CMakeLists.txt  README.org  main.cpp
include/: textor.h
include/details/: textor_impl.h
